# tree-sitter-dotenv

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/: dependabot.yml
.github/workflows/: ci.yml
bindings/go/: binding.go  binding_test.go  bindings.go  bindings_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_dotenv/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterDotenvTests/: TreeSitterDotenvTests.swift
docs/: neovim.md
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: assignments.txt  comments.txt  export.txt  string_values.txt  values.txt  variables.txt
test/nvim/: README.md  init-main.lua  init-master.lua
